--- a/design/untitled.ui
+++ b/design/untitled.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1213</width>
-    <height>843</height>
+    <width>1106</width>
+    <height>745</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -173,9 +173,6 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="1">
-     <widget class="QListView" name="listView"/>
-    </item>
     <item row="0" column="0">
      <widget class="QLabel" name="label_5">
       <property name="text">
@@ -195,6 +192,9 @@
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QLineEdit" name="lineEdit_4"/>
     </item>
    </layout>
   </widget>
