--- a/icons/resources.qrc
+++ b/icons/resources.qrc
@@ -7,5 +7,6 @@
         <file alias="running-solid.png">running-solid.png</file>
         <file alias="book-solid.png">book-solid.png</file>
         <file alias="chart-line-solid.png">chart-line-solid.png</file>
+        <file alias="window-icon.png">window-icon.png</file>
     </qresource>
 </RCC>
