UI: Make it possible to add events

--- a/frontend/App.css
+++ b/frontend/App.css
@@ -38,3 +38,5 @@
 /* see https://stackoverflow.com/questions/21168521/table-fixed-header-and-scrollable-body */
 .amarcord-table-fix-head          { overflow: auto; height: 100px; }
 .amarcord-table-fix-head thead th { position: sticky; top: 0; z-index: 1; background: white; }
+
+.amarcord-alert-small { padding: 0.5rem !important; }
