--- a/frontend/App.css
+++ b/frontend/App.css
@@ -7,6 +7,10 @@ a:hover {
   cursor:pointer;
 }
 
+.modal-backdrop {
+  opacity:0.7 !important;
+}
+
 [data-tooltip]:before {
     /* needed - do not touch */
     content: attr(data-tooltip);
