--- a/frontend/App.css
+++ b/frontend/App.css
@@ -33,8 +33,8 @@ a:hover {
     border-radius: 0.25rem;
 
     /* customizable */
-    background: #0d6efd;
-    color: white;
+    background: white;
+    color: black;
     margin-top: -50px;
     margin-left: 20px;
 }
