💄 UI: Add a nice "cell description" edit widget

--- a/frontend/assets/App.css
+++ b/frontend/assets/App.css
@@ -87,3 +87,14 @@ a:hover {
 .amarcord-small-link-button {
     padding: 0 !important;
 }
+
+.amarcord-input-no-arrows {
+    input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+    input[type=number] {
+        -moz-appearance: textfield;
+        /* Firefox */
+    }    
+}
